--- a/上传文件/文件上传客户端/index.html
+++ b/上传文件/文件上传客户端/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>珠峰在线Web高级课</title>
+    <title>文件上传demo</title>
 
     <!-- IMPORT CSS -->
     <link rel="stylesheet" href="css/reset.min.css">
